--- a/image_merging.ipynb
+++ b/image_merging.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "pipe = StableDiffusionImageMergingPipeline.from_pretrained(\n",
     "    \"lambdalabs/sd-image-variations-diffusers\", revision=\"v2.0\",\n",
-    "    torch_dtype=torch.float16, use_safetensors=True\n",
+    "    torch_dtype=torch.float16\n",
     ")\n",
     "pipe.to(\"cuda\")\n",
     "pipe.enable_xformers_memory_efficient_attention()\n",
