fix: inpaint_image.py

--- a/image_merging.ipynb
+++ b/image_merging.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "!pip install git+https://github.com/Navu45/image-merging.git"
@@ -10,8 +10,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-10-04T18:56:12.719401Z",
-     "end_time": "2023-10-04T18:56:20.429443Z"
+     "start_time": "2023-10-06T14:40:37.668424Z",
+     "end_time": "2023-10-06T14:40:38.140914Z"
     }
    }
   },
@@ -28,8 +28,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-10-04T18:56:20.431695Z",
-     "end_time": "2023-10-04T18:56:26.011455Z"
+     "start_time": "2023-10-04T19:06:20.024489Z",
+     "end_time": "2023-10-04T19:06:20.033489Z"
+    },
+    "pycharm": {
+     "is_executing": true
     }
    }
   },
@@ -39,8 +42,11 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "start_time": "2023-10-04T18:56:26.014454Z",
-     "end_time": "2023-10-04T18:56:33.285085Z"
+     "start_time": "2023-10-04T19:06:20.028243Z",
+     "end_time": "2023-10-04T19:06:27.191177Z"
+    },
+    "pycharm": {
+     "is_executing": true
     }
    },
    "outputs": [],
@@ -84,6 +90,9 @@
     "ExecuteTime": {
      "start_time": "2023-10-04T18:56:33.291084Z",
      "end_time": "2023-10-04T19:04:01.532788Z"
+    },
+    "pycharm": {
+     "is_executing": true
     }
    }
   }
