fix: colab notebook

--- a/image_merging.ipynb
+++ b/image_merging.ipynb
@@ -118,7 +118,7 @@
     "from diffusers import DDIMScheduler\n",
     "from mobile_sam import sam_model_registry, SamAutomaticMaskGenerator\n",
     "\n",
-    "from models.inpaint_image import InpaintPipeline, generate"
+    "from models.inpaint_image import InpaintPipeline"
    ],
    "metadata": {
     "collapsed": false,
@@ -240,13 +240,16 @@
     }
    ],
    "source": [
+    "from models.inpaint_image import generate_image\n",
+    "\n",
+    "\n",
     "def save_images(*images):\n",
     "    for i, image in enumerate(images):\n",
     "        image.save(f'image{i}.png')\n",
     "\n",
     "def create_img(source_image, target_image) -> list:\n",
     "    source_image, target_image = source_image.resize((512, 512)), target_image.resize((512, 512))\n",
-    "    return generate(source_image, target_image, pipe, mask_generator)\n",
+    "    return generate_image(source_image, target_image, pipe, mask_generator)\n",
     "\n",
     "with gr.Blocks() as demo:\n",
     "    with gr.Tab(\"\"):\n",
