fix: dependencies in colab notebook

--- a/image_merging.ipynb
+++ b/image_merging.ipynb
@@ -98,7 +98,8 @@
     }
    ],
    "source": [
-    "!pip install git+https://github.com/Navu45/image-merging.git"
+    "!pip install git+https://github.com/Navu45/image-merging.git\n",
+    "!pip install git+https://github.com/ChaoningZhang/MobileSAM.git"
    ],
    "metadata": {
     "collapsed": false,
