fix: dependencies in colab notebook

--- a/image_merging.ipynb
+++ b/image_merging.ipynb
@@ -131,6 +131,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: 'git lfs clone' is deprecated and will not be updated\n",
+      "          with new flags from 'git clone'\n",
+      "\n",
+      "'git clone' has been updated in upstream Git to have comparable\n",
+      "speeds to 'git lfs clone'.\n",
+      "Cloning into 'MobileSAM'...\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git lfs clone https://huggingface.co/dhkim2810/MobileSAM"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-10-12T19:41:52.997454Z",
+     "end_time": "2023-10-12T19:42:00.932034Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {
     "collapsed": true,
@@ -184,7 +212,7 @@
     "pipe.enable_xformers_memory_efficient_attention()\n",
     "\n",
     "model_type = \"vit_t\"\n",
-    "sam_checkpoint = \"./models/weights/mobile_sam.pt\"\n",
+    "sam_checkpoint = \"./MobileSAM/mobile_sam.pt\"\n",
     "mobile_sam = sam_model_registry[model_type](checkpoint=sam_checkpoint)\n",
     "mobile_sam.to(device=device)\n",
     "mobile_sam.eval()\n",
