--- a/finetune-model.ipynb
+++ b/finetune-model.ipynb
@@ -7213,8 +7213,8 @@
     "id": "u1-_duiMhyhQ",
     "outputId": "ea49ae6f-e15a-4b57-efb9-fd8454c38741",
     "ExecuteTime": {
-     "start_time": "2023-10-12T18:49:52.017643Z",
-     "end_time": "2023-10-12T18:49:52.022892Z"
+     "start_time": "2023-10-12T20:26:14.133547Z",
+     "end_time": "2023-10-12T20:26:14.234795Z"
     }
    },
    "outputs": [],
@@ -7235,8 +7235,8 @@
    "metadata": {
     "id": "_oSTb65RlYRF",
     "ExecuteTime": {
-     "start_time": "2023-10-12T18:49:52.026644Z",
-     "end_time": "2023-10-12T18:49:56.599124Z"
+     "start_time": "2023-10-12T20:26:14.147795Z",
+     "end_time": "2023-10-12T20:26:19.590724Z"
     }
    },
    "execution_count": 2,
@@ -7282,8 +7282,8 @@
     "cellView": "form",
     "id": "uOI1Rbbqgs8c",
     "ExecuteTime": {
-     "start_time": "2023-10-12T18:49:56.601372Z",
-     "end_time": "2023-10-12T18:49:56.604374Z"
+     "start_time": "2023-10-12T20:26:19.597549Z",
+     "end_time": "2023-10-12T20:26:19.601974Z"
     }
    },
    "execution_count": 3,
@@ -7310,8 +7310,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-10-12T18:49:56.605873Z",
-     "end_time": "2023-10-12T18:49:59.446501Z"
+     "start_time": "2023-10-12T20:26:19.603473Z",
+     "end_time": "2023-10-12T20:26:22.755387Z"
     }
    }
   },
@@ -7334,8 +7334,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-10-12T18:49:59.445749Z",
-     "end_time": "2023-10-12T18:49:59.446501Z"
+     "start_time": "2023-10-12T20:26:22.755387Z",
+     "end_time": "2023-10-12T20:26:22.755387Z"
     }
    }
   },
@@ -7357,8 +7357,8 @@
    "metadata": {
     "id": "YY2Rksk3W8es",
     "ExecuteTime": {
-     "start_time": "2023-10-12T18:49:59.445749Z",
-     "end_time": "2023-10-12T18:50:27.364867Z"
+     "start_time": "2023-10-12T20:26:22.755387Z",
+     "end_time": "2023-10-12T20:26:52.906141Z"
     }
    },
    "execution_count": 6,
@@ -7367,7 +7367,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "10/12/2023 18:50:06 - INFO - __main__ - Distributed environment: NO\n",
+      "10/12/2023 20:26:31 - INFO - __main__ - Distributed environment: NO\n",
       "Num processes: 1\n",
       "Process index: 0\n",
       "Local process index: 0\n",
@@ -7375,67 +7375,51 @@
       "\n",
       "Mixed precision type: fp16\n",
       "\n",
-      "{'timestep_spacing', 'thresholding', 'sample_max_value', 'dynamic_thresholding_ratio', 'variance_type', 'clip_sample_range'} was not found in config. Values will be initialized to default values.\n",
+      "{'thresholding', 'dynamic_thresholding_ratio', 'timestep_spacing', 'sample_max_value', 'clip_sample_range', 'variance_type'} was not found in config. Values will be initialized to default values.\n",
       "You are using a model of type clip_vision_model to instantiate a model of type clip. This is not supported for all configurations of models and can yield errors.\n",
       "{'force_upcast', 'scaling_factor'} was not found in config. Values will be initialized to default values.\n",
-      "{'resnet_out_scale_factor', 'conv_out_kernel', 'resnet_skip_time_act', 'timestep_post_act', 'addition_time_embed_dim', 'num_attention_heads', 'time_cond_proj_dim', 'encoder_hid_dim', 'time_embedding_dim', 'cross_attention_norm', 'time_embedding_type', 'addition_embed_type_num_heads', 'upcast_attention', 'class_embeddings_concat', 'mid_block_only_cross_attention', 'encoder_hid_dim_type', 'transformer_layers_per_block', 'resnet_time_scale_shift', 'dropout', 'time_embedding_act_fn', 'mid_block_type', 'conv_in_kernel', 'class_embed_type', 'addition_embed_type', 'projection_class_embeddings_input_dim', 'attention_type'} was not found in config. Values will be initialized to default values.\n",
-      "10/12/2023 18:50:12 - WARNING - xformers - A matching Triton is not available, some optimizations will not be enabled.\n",
+      "{'cross_attention_norm', 'transformer_layers_per_block', 'num_attention_heads', 'encoder_hid_dim', 'conv_in_kernel', 'addition_embed_type', 'time_embedding_dim', 'resnet_skip_time_act', 'upcast_attention', 'conv_out_kernel', 'class_embeddings_concat', 'mid_block_only_cross_attention', 'resnet_time_scale_shift', 'resnet_out_scale_factor', 'timestep_post_act', 'time_embedding_type', 'mid_block_type', 'time_cond_proj_dim', 'encoder_hid_dim_type', 'addition_embed_type_num_heads', 'dropout', 'class_embed_type', 'addition_time_embed_dim', 'time_embedding_act_fn', 'attention_type', 'projection_class_embeddings_input_dim'} was not found in config. Values will be initialized to default values.\n",
+      "10/12/2023 20:26:39 - WARNING - xformers - A matching Triton is not available, some optimizations will not be enabled.\n",
       "Error caught was: No module named 'triton'\n",
       "wandb: Currently logged in as: jamoncheryev1 (navu45). Use `wandb login --relogin` to force relogin\n",
       "wandb: wandb version 0.15.12 is available!  To upgrade, please run:\n",
       "wandb:  $ pip install wandb --upgrade\n",
       "wandb: Tracking run with wandb version 0.15.2\n",
-      "wandb: Run data is saved locally in C:\\Folder\\WorkProjects\\Workspace\\image-merging\\wandb\\run-20231012_185017-xpwppg3l\n",
+      "wandb: Run data is saved locally in C:\\Folder\\WorkProjects\\Workspace\\image-merging\\wandb\\run-20231012_202643-9ojpkb62\n",
       "wandb: Run `wandb offline` to turn off syncing.\n",
-      "wandb: Syncing run restful-universe-32\n",
+      "wandb: Syncing run sparkling-cherry-41\n",
       "wandb:  View project at https://wandb.ai/navu45/text2image-fine-tune\n",
-      "wandb:  View run at https://wandb.ai/navu45/text2image-fine-tune/runs/xpwppg3l\n",
-      "10/12/2023 18:50:17 - INFO - __main__ - ***** Running training *****\n",
-      "10/12/2023 18:50:17 - INFO - __main__ -   Num examples = 47\n",
-      "10/12/2023 18:50:17 - INFO - __main__ -   Num Epochs = 32\n",
-      "10/12/2023 18:50:17 - INFO - __main__ -   Instantaneous batch size per device = 1\n",
-      "10/12/2023 18:50:17 - INFO - __main__ -   Total train batch size (w. parallel, distributed & accumulation) = 1\n",
-      "10/12/2023 18:50:17 - INFO - __main__ -   Gradient Accumulation steps = 1\n",
-      "10/12/2023 18:50:17 - INFO - __main__ -   Total optimization steps = 1500\n",
+      "wandb:  View run at https://wandb.ai/navu45/text2image-fine-tune/runs/9ojpkb62\n",
+      "10/12/2023 20:26:44 - INFO - __main__ - ***** Running training *****\n",
+      "10/12/2023 20:26:44 - INFO - __main__ -   Num examples = 47\n",
+      "10/12/2023 20:26:44 - INFO - __main__ -   Num Epochs = 32\n",
+      "10/12/2023 20:26:44 - INFO - __main__ -   Instantaneous batch size per device = 1\n",
+      "10/12/2023 20:26:44 - INFO - __main__ -   Total train batch size (w. parallel, distributed & accumulation) = 1\n",
+      "10/12/2023 20:26:44 - INFO - __main__ -   Gradient Accumulation steps = 1\n",
+      "10/12/2023 20:26:44 - INFO - __main__ -   Total optimization steps = 1500\n",
       "\n",
       "  0%|          | 0/1500 [00:00<?, ?it/s]\n",
-      "Steps:   0%|          | 0/1500 [00:00<?, ?it/s]Traceback (most recent call last):\n",
-      "  File \"C:\\Folder\\WorkProjects\\Workspace\\image-merging\\train_text_to_image_lora.py\", line 922, in <module>\n",
+      "Steps:   0%|          | 0/1500 [00:00<?, ?it/s]C:\\Users\\Alexey\\anaconda3\\envs\\hands-tracking\\lib\\site-packages\\diffusers\\models\\attention_processor.py:1537: FutureWarning: `LoRAXFormersAttnProcessor` is deprecated and will be removed in version 0.26.0. Make sure use XFormersAttnProcessor instead by settingLoRA layers to `self.{to_q,to_k,to_v,to_out[0]}.lora_layer` respectively. This will be done automatically when using `LoraLoaderMixin.load_lora_weights`\n",
+      "  deprecate(\n",
+      "C:\\Folder\\WorkProjects\\Workspace\\image-merging\\train_text_to_image_lora.py:757: UserWarning: Using a target size (torch.Size([1, 9, 64, 64])) that is different to the input size (torch.Size([1, 4, 64, 64])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
+      "  loss = F.mse_loss(model_pred.float(), target.float(), reduction=\"mean\")\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Folder\\WorkProjects\\Workspace\\image-merging\\train_text_to_image_lora.py\", line 927, in <module>\n",
       "    main()\n",
-      "  File \"C:\\Folder\\WorkProjects\\Workspace\\image-merging\\train_text_to_image_lora.py\", line 734, in main\n",
-      "    encoder_hidden_states, _ = image_encoder(image, return_uncond_vector=True)\n",
-      "  File \"C:\\Users\\Alexey\\anaconda3\\envs\\hands-tracking\\lib\\site-packages\\torch\\nn\\modules\\module.py\", line 1501, in _call_impl\n",
-      "    return forward_call(*args, **kwargs)\n",
-      "  File \"C:\\Users\\Alexey\\anaconda3\\envs\\hands-tracking\\lib\\site-packages\\diffusers\\pipelines\\paint_by_example\\image_encoder.py\", line 39, in forward\n",
-      "    clip_output = self.model(pixel_values=pixel_values)\n",
-      "  File \"C:\\Users\\Alexey\\anaconda3\\envs\\hands-tracking\\lib\\site-packages\\torch\\nn\\modules\\module.py\", line 1501, in _call_impl\n",
-      "    return forward_call(*args, **kwargs)\n",
-      "  File \"C:\\Users\\Alexey\\anaconda3\\envs\\hands-tracking\\lib\\site-packages\\transformers\\models\\clip\\modeling_clip.py\", line 958, in forward\n",
-      "    return self.vision_model(\n",
-      "  File \"C:\\Users\\Alexey\\anaconda3\\envs\\hands-tracking\\lib\\site-packages\\torch\\nn\\modules\\module.py\", line 1501, in _call_impl\n",
-      "    return forward_call(*args, **kwargs)\n",
-      "  File \"C:\\Users\\Alexey\\anaconda3\\envs\\hands-tracking\\lib\\site-packages\\transformers\\models\\clip\\modeling_clip.py\", line 883, in forward\n",
-      "    hidden_states = self.embeddings(pixel_values)\n",
-      "  File \"C:\\Users\\Alexey\\anaconda3\\envs\\hands-tracking\\lib\\site-packages\\torch\\nn\\modules\\module.py\", line 1501, in _call_impl\n",
-      "    return forward_call(*args, **kwargs)\n",
-      "  File \"C:\\Users\\Alexey\\anaconda3\\envs\\hands-tracking\\lib\\site-packages\\transformers\\models\\clip\\modeling_clip.py\", line 196, in forward\n",
-      "    patch_embeds = self.patch_embedding(pixel_values.to(dtype=target_dtype))  # shape = [*, width, grid, grid]\n",
-      "  File \"C:\\Users\\Alexey\\anaconda3\\envs\\hands-tracking\\lib\\site-packages\\torch\\nn\\modules\\module.py\", line 1501, in _call_impl\n",
-      "    return forward_call(*args, **kwargs)\n",
-      "  File \"C:\\Users\\Alexey\\anaconda3\\envs\\hands-tracking\\lib\\site-packages\\torch\\nn\\modules\\conv.py\", line 463, in forward\n",
-      "    return self._conv_forward(input, self.weight, self.bias)\n",
-      "  File \"C:\\Users\\Alexey\\anaconda3\\envs\\hands-tracking\\lib\\site-packages\\torch\\nn\\modules\\conv.py\", line 459, in _conv_forward\n",
-      "    return F.conv2d(input, weight, bias, self.stride,\n",
-      "RuntimeError: Expected all tensors to be on the same device, but found at least two devices, cpu and cuda:0! (when checking argument for argument weight in method wrapper_CUDA___slow_conv2d_forward)\n",
+      "  File \"C:\\Folder\\WorkProjects\\Workspace\\image-merging\\train_text_to_image_lora.py\", line 757, in main\n",
+      "    loss = F.mse_loss(model_pred.float(), target.float(), reduction=\"mean\")\n",
+      "  File \"C:\\Users\\Alexey\\anaconda3\\envs\\hands-tracking\\lib\\site-packages\\torch\\nn\\functional.py\", line 3294, in mse_loss\n",
+      "    expanded_input, expanded_target = torch.broadcast_tensors(input, target)\n",
+      "  File \"C:\\Users\\Alexey\\anaconda3\\envs\\hands-tracking\\lib\\site-packages\\torch\\functional.py\", line 74, in broadcast_tensors\n",
+      "    return _VF.broadcast_tensors(tensors)  # type: ignore[attr-defined]\n",
+      "RuntimeError: The size of tensor a (4) must match the size of tensor b (9) at non-singleton dimension 1\n",
       "wandb: Waiting for W&B process to finish... (failed 1). Press Ctrl-C to abort syncing.\n",
-      "wandb: - 0.002 MB of 0.002 MB uploaded (0.000 MB deduped)\n",
-      "wandb: \\ 0.002 MB of 0.002 MB uploaded (0.000 MB deduped)\n",
-      "wandb: | 0.002 MB of 0.002 MB uploaded (0.000 MB deduped)\n",
-      "wandb: / 0.002 MB of 0.002 MB uploaded (0.000 MB deduped)\n",
-      "wandb: - 0.002 MB of 0.002 MB uploaded (0.000 MB deduped)\n",
-      "wandb:  View run restful-universe-32 at: https://wandb.ai/navu45/text2image-fine-tune/runs/xpwppg3l\n",
+      "wandb: - 0.002 MB of 0.012 MB uploaded (0.000 MB deduped)\n",
+      "wandb: \\ 0.002 MB of 0.012 MB uploaded (0.000 MB deduped)\n",
+      "wandb: | 0.012 MB of 0.012 MB uploaded (0.000 MB deduped)\n",
+      "wandb:  View run sparkling-cherry-41 at: https://wandb.ai/navu45/text2image-fine-tune/runs/9ojpkb62\n",
       "wandb: Synced 5 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)\n",
-      "wandb: Find logs at: .\\wandb\\run-20231012_185017-xpwppg3l\\logs\n",
+      "wandb: Find logs at: .\\wandb\\run-20231012_202643-9ojpkb62\\logs\n",
       "Traceback (most recent call last):\n",
       "  File \"C:\\Users\\Alexey\\anaconda3\\envs\\hands-tracking\\lib\\runpy.py\", line 197, in _run_module_as_main\n",
       "    return _run_code(code, main_globals, None,\n",
@@ -7473,8 +7457,8 @@
     "cellView": "form",
     "id": "VQysFk4wP2AW",
     "ExecuteTime": {
-     "start_time": "2023-10-12T18:50:27.365618Z",
-     "end_time": "2023-10-12T18:50:27.368616Z"
+     "start_time": "2023-10-12T20:26:52.909139Z",
+     "end_time": "2023-10-12T20:26:52.914390Z"
     }
    },
    "execution_count": 7,
@@ -7501,8 +7485,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-10-12T18:50:27.375366Z",
-     "end_time": "2023-10-12T18:50:27.718864Z"
+     "start_time": "2023-10-12T20:26:52.916639Z",
+     "end_time": "2023-10-12T20:26:53.403387Z"
     }
    }
   },
@@ -7522,8 +7506,8 @@
     "id": "-GkLV_oalpnb",
     "outputId": "425f98b2-cb09-485e-8bc5-1870c7d2e7eb",
     "ExecuteTime": {
-     "start_time": "2023-10-12T18:50:27.718864Z",
-     "end_time": "2023-10-12T18:50:29.262253Z"
+     "start_time": "2023-10-12T20:26:53.350138Z",
+     "end_time": "2023-10-12T20:26:54.720682Z"
     }
    },
    "execution_count": 9,
@@ -7779,7 +7763,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "image_encoder\\model.safetensors not found\n"
+      "vae\\diffusion_pytorch_model.safetensors not found\n"
      ]
     },
     {
@@ -7788,7 +7772,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "8233dff3855347e99ac7a25300438474"
+       "model_id": "7568d1d93f144179a036d61c3b0e8249"
       }
      },
      "metadata": {},
@@ -7796,14 +7780,14 @@
     },
     {
      "ename": "ValueError",
-     "evalue": "Pipeline <class 'diffusers.pipelines.controlnet.pipeline_controlnet.StableDiffusionControlNetPipeline'> expected {'text_encoder', 'safety_checker', 'feature_extractor', 'vae', 'unet', 'controlnet', 'scheduler', 'tokenizer'}, but only {'safety_checker', 'feature_extractor', 'vae', 'unet', 'scheduler', 'controlnet'} were passed.",
+     "evalue": "Pipeline <class 'diffusers.pipelines.controlnet.pipeline_controlnet.StableDiffusionControlNetPipeline'> expected {'feature_extractor', 'tokenizer', 'vae', 'scheduler', 'safety_checker', 'unet', 'controlnet', 'text_encoder'}, but only {'feature_extractor', 'scheduler', 'safety_checker', 'vae', 'unet', 'controlnet'} were passed.",
      "output_type": "error",
      "traceback": [
       "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
       "\u001B[1;31mValueError\u001B[0m                                Traceback (most recent call last)",
       "Cell \u001B[1;32mIn[10], line 5\u001B[0m\n\u001B[0;32m      1\u001B[0m controlnet \u001B[38;5;241m=\u001B[39m ControlNetModel\u001B[38;5;241m.\u001B[39mfrom_pretrained(\n\u001B[0;32m      2\u001B[0m     \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mlllyasviel/sd-controlnet-scribble\u001B[39m\u001B[38;5;124m\"\u001B[39m, torch_dtype\u001B[38;5;241m=\u001B[39mtorch\u001B[38;5;241m.\u001B[39mfloat16\n\u001B[0;32m      3\u001B[0m )\n\u001B[1;32m----> 5\u001B[0m pipe \u001B[38;5;241m=\u001B[39m \u001B[43mStableDiffusionControlNetPipeline\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mfrom_pretrained\u001B[49m\u001B[43m(\u001B[49m\n\u001B[0;32m      6\u001B[0m \u001B[43m    \u001B[49m\u001B[43mBASE_MODEL\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mcontrolnet\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mcontrolnet\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43msafety_checker\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;28;43;01mNone\u001B[39;49;00m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mtorch_dtype\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mtorch\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mfloat16\u001B[49m\n\u001B[0;32m      7\u001B[0m \u001B[43m)\u001B[49m\n\u001B[0;32m      8\u001B[0m pipe\u001B[38;5;241m.\u001B[39munet\u001B[38;5;241m.\u001B[39mload_attn_procs(REPO_ID)\n\u001B[0;32m      9\u001B[0m pipe\u001B[38;5;241m.\u001B[39mto(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mcuda\u001B[39m\u001B[38;5;124m'\u001B[39m)\n",
       "File \u001B[1;32m~\\anaconda3\\envs\\hands-tracking\\lib\\site-packages\\diffusers\\pipelines\\pipeline_utils.py:1188\u001B[0m, in \u001B[0;36mDiffusionPipeline.from_pretrained\u001B[1;34m(cls, pretrained_model_name_or_path, **kwargs)\u001B[0m\n\u001B[0;32m   1186\u001B[0m \u001B[38;5;28;01melif\u001B[39;00m \u001B[38;5;28mlen\u001B[39m(missing_modules) \u001B[38;5;241m>\u001B[39m \u001B[38;5;241m0\u001B[39m:\n\u001B[0;32m   1187\u001B[0m     passed_modules \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mset\u001B[39m(\u001B[38;5;28mlist\u001B[39m(init_kwargs\u001B[38;5;241m.\u001B[39mkeys()) \u001B[38;5;241m+\u001B[39m \u001B[38;5;28mlist\u001B[39m(passed_class_obj\u001B[38;5;241m.\u001B[39mkeys())) \u001B[38;5;241m-\u001B[39m optional_kwargs\n\u001B[1;32m-> 1188\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mValueError\u001B[39;00m(\n\u001B[0;32m   1189\u001B[0m         \u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mPipeline \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mpipeline_class\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m expected \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mexpected_modules\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m, but only \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mpassed_modules\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m were passed.\u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m   1190\u001B[0m     )\n\u001B[0;32m   1192\u001B[0m \u001B[38;5;66;03m# 8. Instantiate the pipeline\u001B[39;00m\n\u001B[0;32m   1193\u001B[0m model \u001B[38;5;241m=\u001B[39m pipeline_class(\u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39minit_kwargs)\n",
-      "\u001B[1;31mValueError\u001B[0m: Pipeline <class 'diffusers.pipelines.controlnet.pipeline_controlnet.StableDiffusionControlNetPipeline'> expected {'text_encoder', 'safety_checker', 'feature_extractor', 'vae', 'unet', 'controlnet', 'scheduler', 'tokenizer'}, but only {'safety_checker', 'feature_extractor', 'vae', 'unet', 'scheduler', 'controlnet'} were passed."
+      "\u001B[1;31mValueError\u001B[0m: Pipeline <class 'diffusers.pipelines.controlnet.pipeline_controlnet.StableDiffusionControlNetPipeline'> expected {'feature_extractor', 'tokenizer', 'vae', 'scheduler', 'safety_checker', 'unet', 'controlnet', 'text_encoder'}, but only {'feature_extractor', 'scheduler', 'safety_checker', 'vae', 'unet', 'controlnet'} were passed."
      ]
     }
    ]
