add: Kandinsky version

--- a/notebooks/finetune-model.ipynb
+++ b/notebooks/finetune-model.ipynb
@@ -7213,8 +7213,8 @@
     "id": "u1-_duiMhyhQ",
     "outputId": "ea49ae6f-e15a-4b57-efb9-fd8454c38741",
     "ExecuteTime": {
-     "start_time": "2023-10-17T22:55:14.903982Z",
-     "end_time": "2023-10-17T22:55:14.916984Z"
+     "start_time": "2023-10-18T20:01:55.740367Z",
+     "end_time": "2023-10-18T20:01:55.783941Z"
     }
    },
    "outputs": [],
@@ -7234,8 +7234,8 @@
    "metadata": {
     "id": "_oSTb65RlYRF",
     "ExecuteTime": {
-     "start_time": "2023-10-17T22:55:14.915984Z",
-     "end_time": "2023-10-17T22:55:18.543962Z"
+     "start_time": "2023-10-18T20:01:55.759942Z",
+     "end_time": "2023-10-18T20:01:59.143556Z"
     }
    },
    "execution_count": 2,
@@ -7260,20 +7260,14 @@
     "MAX_TRAIN_STEPS = 1500 #@param {type:\"number\"}\n",
     "CHECKPOINTING_STEPS = 100  #@param {type:\"number\"}\n",
     "LEARNING_RATE = 1e-4  #@param {type:\"number\"}\n",
-    "LR_SCHEDULER = \"constant\" #@param{type: 'string'}\n",
-    "\n",
-    "#@markdown Validation params\n",
-    "#@markdown ---\n",
-    "VALIDATION_PROMPT = \"Amidst the towering skyscrapers and congested streets of a metropolis, chaotic energy abounds. The scene is a collision of neon lights, honking vehicles, rushing pedestrians, and graffiti-covered walls, all contributing to an unrelenting urban frenzy.\" #@param{type: 'string'}\n",
-    "VALIDATION_PROMPT = \"\\\"\" +  VALIDATION_PROMPT +  \"\\\"\"\n",
-    "VALIDATION_EPOCHS = \"10\" #@param{type: 'string'}"
+    "LR_SCHEDULER = \"constant\" #@param{type: 'string'}"
    ],
    "metadata": {
     "cellView": "form",
     "id": "uOI1Rbbqgs8c",
     "ExecuteTime": {
-     "start_time": "2023-10-17T22:55:18.546960Z",
-     "end_time": "2023-10-17T22:55:18.559960Z"
+     "start_time": "2023-10-18T20:01:59.146556Z",
+     "end_time": "2023-10-18T20:01:59.158556Z"
     }
    },
    "execution_count": 3,
@@ -7290,8 +7284,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-10-17T22:55:18.560960Z",
-     "end_time": "2023-10-17T22:55:18.579959Z"
+     "start_time": "2023-10-18T20:01:59.160555Z",
+     "end_time": "2023-10-18T20:01:59.178556Z"
     }
    }
   },
@@ -7305,8 +7299,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-10-17T22:55:18.576960Z",
-     "end_time": "2023-10-17T22:55:18.592962Z"
+     "start_time": "2023-10-18T20:01:59.176556Z",
+     "end_time": "2023-10-18T20:01:59.191559Z"
     }
    }
   },
@@ -7314,7 +7308,7 @@
    "cell_type": "code",
    "source": [
     "# https://github.com/huggingface/diffusers/tree/main/examples/text_to_image\n",
-    "!accelerate launch --mixed_precision={MIXED_PRECISION} unclip_lora.py \\\n",
+    "!accelerate launch --mixed_precision={MIXED_PRECISION} ../unclip_inpainting_lora.py \\\n",
     "  --pretrained_model_name_or_path={BASE_MODEL} \\\n",
     "  --dataset_name={DATASET_NAME} --caption_column=\"caption\" \\\n",
     "  --resolution={RESOLUTION} --random_flip  \\\n",
@@ -7328,17 +7322,66 @@
    "metadata": {
     "id": "YY2Rksk3W8es",
     "ExecuteTime": {
-     "start_time": "2023-10-17T22:56:02.432023Z",
-     "end_time": "2023-10-17T22:56:24.595159Z"
+     "start_time": "2023-10-18T20:06:22.314090Z",
+     "end_time": "2023-10-18T20:06:30.227169Z"
     }
    },
-   "execution_count": 7,
+   "execution_count": 11,
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "^C\n"
+      "usage: unclip_inpainting_lora.py [-h] --pretrained_model_name_or_path\n",
+      "                                 PRETRAINED_MODEL_NAME_OR_PATH\n",
+      "                                 [--tokenizer_name TOKENIZER_NAME]\n",
+      "                                 --instance_data_dir INSTANCE_DATA_DIR\n",
+      "                                 [--class_data_dir CLASS_DATA_DIR]\n",
+      "                                 [--instance_prompt INSTANCE_PROMPT]\n",
+      "                                 [--class_prompt CLASS_PROMPT]\n",
+      "                                 [--with_prior_preservation]\n",
+      "                                 [--prior_loss_weight PRIOR_LOSS_WEIGHT]\n",
+      "                                 [--num_class_images NUM_CLASS_IMAGES]\n",
+      "                                 [--output_dir OUTPUT_DIR] [--seed SEED]\n",
+      "                                 [--resolution RESOLUTION] [--center_crop]\n",
+      "                                 [--train_text_encoder]\n",
+      "                                 [--train_batch_size TRAIN_BATCH_SIZE]\n",
+      "                                 [--sample_batch_size SAMPLE_BATCH_SIZE]\n",
+      "                                 [--num_train_epochs NUM_TRAIN_EPOCHS]\n",
+      "                                 [--max_train_steps MAX_TRAIN_STEPS]\n",
+      "                                 [--gradient_accumulation_steps GRADIENT_ACCUMULATION_STEPS]\n",
+      "                                 [--gradient_checkpointing]\n",
+      "                                 [--learning_rate LEARNING_RATE] [--scale_lr]\n",
+      "                                 [--lr_scheduler LR_SCHEDULER]\n",
+      "                                 [--lr_warmup_steps LR_WARMUP_STEPS]\n",
+      "                                 [--use_8bit_adam] [--adam_beta1 ADAM_BETA1]\n",
+      "                                 [--adam_beta2 ADAM_BETA2]\n",
+      "                                 [--adam_weight_decay ADAM_WEIGHT_DECAY]\n",
+      "                                 [--adam_epsilon ADAM_EPSILON]\n",
+      "                                 [--max_grad_norm MAX_GRAD_NORM]\n",
+      "                                 [--push_to_hub] [--hub_token HUB_TOKEN]\n",
+      "                                 [--hub_model_id HUB_MODEL_ID]\n",
+      "                                 [--logging_dir LOGGING_DIR]\n",
+      "                                 [--mixed_precision {no,fp16,bf16}]\n",
+      "                                 [--local_rank LOCAL_RANK]\n",
+      "                                 [--checkpointing_steps CHECKPOINTING_STEPS]\n",
+      "                                 [--checkpoints_total_limit CHECKPOINTS_TOTAL_LIMIT]\n",
+      "                                 [--resume_from_checkpoint RESUME_FROM_CHECKPOINT]\n",
+      "                                 [--enable_xformers_memory_efficient_attention]\n",
+      "unclip_inpainting_lora.py: error: the following arguments are required: --instance_data_dir\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\Alexey\\anaconda3\\envs\\hands-tracking\\lib\\runpy.py\", line 197, in _run_module_as_main\n",
+      "    return _run_code(code, main_globals, None,\n",
+      "  File \"C:\\Users\\Alexey\\anaconda3\\envs\\hands-tracking\\lib\\runpy.py\", line 87, in _run_code\n",
+      "    exec(code, run_globals)\n",
+      "  File \"C:\\Users\\Alexey\\anaconda3\\envs\\hands-tracking\\Scripts\\accelerate.exe\\__main__.py\", line 7, in <module>\n",
+      "  File \"C:\\Users\\Alexey\\anaconda3\\envs\\hands-tracking\\lib\\site-packages\\accelerate\\commands\\accelerate_cli.py\", line 45, in main\n",
+      "    args.func(args)\n",
+      "  File \"C:\\Users\\Alexey\\anaconda3\\envs\\hands-tracking\\lib\\site-packages\\accelerate\\commands\\launch.py\", line 979, in launch_command\n",
+      "    simple_launcher(args)\n",
+      "  File \"C:\\Users\\Alexey\\anaconda3\\envs\\hands-tracking\\lib\\site-packages\\accelerate\\commands\\launch.py\", line 628, in simple_launcher\n",
+      "    raise subprocess.CalledProcessError(returncode=process.returncode, cmd=cmd)\n",
+      "subprocess.CalledProcessError: Command '['C:\\\\Users\\\\Alexey\\\\anaconda3\\\\envs\\\\hands-tracking\\\\python.exe', '../unclip_inpainting_lora.py', '--pretrained_model_name_or_path=stabilityai/stable-diffusion-2-1-unclip', '--dataset_name=laion/dalle-3-dataset', '--caption_column=caption', '--resolution=512', '--random_flip', '--train_batch_size=1', '--max_train_steps=1500', '--checkpointing_steps=100', '--learning_rate=0.0001', '--lr_scheduler=constant', '--lr_warmup_steps=0', '--seed=421435', '--enable_xformers_memory_efficient_attention', '--output_dir=models/output', '--report_to=wandb', '--push_to_hub', '--hub_model_id=Navu45/sd-2-1-unclip-inpainting']' returned non-zero exit status 2.\n"
      ]
     }
    ]
@@ -7363,17 +7406,29 @@
     "cellView": "form",
     "id": "VQysFk4wP2AW",
     "ExecuteTime": {
-     "start_time": "2023-10-17T20:48:29.278135Z",
-     "end_time": "2023-10-17T20:48:29.319131Z"
+     "start_time": "2023-10-18T20:02:02.664278Z",
+     "end_time": "2023-10-18T20:02:02.679274Z"
     }
    },
-   "execution_count": null,
+   "execution_count": 7,
    "outputs": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 8,
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'selfies_dataset' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[8], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m style_image \u001B[38;5;241m=\u001B[39m \u001B[43mselfies_dataset\u001B[49m[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mtrain\u001B[39m\u001B[38;5;124m'\u001B[39m][\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mimage\u001B[39m\u001B[38;5;124m'\u001B[39m][\u001B[38;5;241m0\u001B[39m]\n\u001B[0;32m      2\u001B[0m style_image\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'selfies_dataset' is not defined"
+     ]
+    }
+   ],
    "source": [
     "style_image = selfies_dataset['train']['image'][0]\n",
     "style_image"
@@ -7872,8 +7927,17 @@
     "\n",
     "Из всех экспериментов, наиболее близок к запросу последний эксперимент, с (1) использованием *предобученной модели*, входных изображений (2) *сеттинга* и скетча, а также использование (3) *текстового описания*, которое *соответствует стилю*.\n",
     "\n",
-    "Также "
+    "Также"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
